[package]
name = "shell"
version = "0.1.0"
authors = [
    "Carl Stoker <carl_stoker@uri.edu>",
    "Nick Rommel <nick_rommel13@uri.edu>"
]

edition = "2021"
rust-version = "1.79"
description = "Machine learning for CLAM"
license = "MIT"
readme = "./README.md"
documentation = "https://docs.rs/abd-clam/latest/abd_clam/"
repository = "https://github.com/URI-ABD/clam"
homepage = "https://github.com/URI-ABD/clam"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
